--- a/PillsPromise/ItemDetail.storyboard
+++ b/PillsPromise/ItemDetail.storyboard
@@ -316,7 +316,7 @@
         <!--Item Detail Alarm Table View Controller-->
         <scene sceneID="FhQ-A4-brq">
             <objects>
-                <tableViewController id="4DR-ON-C5M" customClass="ItemDetailAlarmTableViewController" customModule="PillsPromise" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ItemDetailAlarmTableViewController" id="4DR-ON-C5M" customClass="ItemDetailAlarmTableViewController" customModule="PillsPromise" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hDC-MJ-AUP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
