--- a/PillsPromise/ItemDetail.storyboard
+++ b/PillsPromise/ItemDetail.storyboard
@@ -283,6 +283,57 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="w1n-qp-8ko">
+                                        <rect key="frame" x="0.0" y="496.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w1n-qp-8ko" id="6Tq-MP-Etx">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사진" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4U8-Go-ZAK">
+                                                    <rect key="frame" x="30" y="15.5" width="354" height="13"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NY5-xt-qcc">
+                                                    <rect key="frame" x="346" y="4.5" width="30" height="35"/>
+                                                    <state key="normal" title="Edit"/>
+                                                    <connections>
+                                                        <action selector="imageAdd:" destination="BKe-jA-eWw" eventType="touchUpInside" id="MMv-QU-5U3"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="4U8-Go-ZAK" secondAttribute="trailing" constant="10" id="7bY-pa-PEp"/>
+                                                <constraint firstAttribute="bottom" secondItem="NY5-xt-qcc" secondAttribute="bottom" constant="4.5" id="NQ7-B4-WeY"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="4U8-Go-ZAK" secondAttribute="bottom" constant="4.5" id="NlK-DZ-Nkc"/>
+                                                <constraint firstItem="4U8-Go-ZAK" firstAttribute="top" secondItem="6Tq-MP-Etx" secondAttribute="topMargin" constant="4.5" id="TGz-9N-Jtk"/>
+                                                <constraint firstAttribute="trailing" secondItem="NY5-xt-qcc" secondAttribute="trailing" constant="38" id="gDG-Un-meX"/>
+                                                <constraint firstItem="4U8-Go-ZAK" firstAttribute="leading" secondItem="6Tq-MP-Etx" secondAttribute="leadingMargin" constant="10" id="yJ4-NH-RL3"/>
+                                                <constraint firstItem="NY5-xt-qcc" firstAttribute="top" secondItem="6Tq-MP-Etx" secondAttribute="top" constant="4.5" id="yRV-yY-JLE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="200" id="I0t-3r-eed">
+                                        <rect key="frame" x="0.0" y="540" width="414" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="I0t-3r-eed" id="UDu-Xl-3mm">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PX7-6Q-EUf">
+                                                    <rect key="frame" x="20" y="4.5" width="374" height="191"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="PX7-6Q-EUf" secondAttribute="bottom" constant="4.5" id="QKW-ar-pFD"/>
+                                                <constraint firstAttribute="trailing" secondItem="PX7-6Q-EUf" secondAttribute="trailing" constant="20" id="ZaE-Pm-QUZ"/>
+                                                <constraint firstItem="PX7-6Q-EUf" firstAttribute="top" secondItem="UDu-Xl-3mm" secondAttribute="top" constant="4.5" id="uTz-Hg-iSE"/>
+                                                <constraint firstItem="PX7-6Q-EUf" firstAttribute="leading" secondItem="UDu-Xl-3mm" secondAttribute="leading" constant="20" id="vi5-WD-FAG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -301,6 +352,7 @@
                     <connections>
                         <outlet property="addBarButton" destination="IY9-kp-OnQ" id="F8q-5Z-k0A"/>
                         <outlet property="deleteExpirationDateButton" destination="dG2-k2-yPe" id="Rsb-61-hdo"/>
+                        <outlet property="imageView" destination="PX7-6Q-EUf" id="wnE-nw-gow"/>
                         <outlet property="itemDetailTableView" destination="fcu-Qx-UJf" id="bmb-go-U9N"/>
                         <outlet property="label_date_expiration" destination="Mzb-R6-00y" id="qkT-Ry-ceN"/>
                         <outlet property="textfield_med_info" destination="bI4-3b-bFU" id="Kmr-VP-oxJ"/>
